# GamenChillApp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE.md  README.md  vcpkg.json
Assets/: E40.xlsx  Rififi #40 bracket.xlsx
Assets/Data/: Canva.json  CanvaDuo.json  CanvaSolo.json  CanvaToSave.json  CharactersTracksLinks.json  Tags.json  help.txt
Brackets/: Rififi #34 bracket.xlsx  Rififi #35 bracket.xlsx  Rififi #36 bracket.xlsx  Rififi #37 bracket.xlsx  Rififi #39 bracket.xlsx  Rififi #40 bracket.xlsx  memo.txt
include/: GNCApp.hpp  Generator.hpp  Logic.hpp  MKTG.hpp  Update.hpp  Utils.hpp
include/Commands/: Cmd_Background.hpp  Cmd_Count.hpp  Cmd_Create.hpp  Cmd_Date.hpp  Cmd_Dir.hpp  Cmd_Help.hpp  Cmd_List.hpp  Cmd_Load.hpp  Cmd_Player.hpp  Cmd_Print.hpp  Cmd_Quit.hpp  Cmd_Random.hpp  Cmd_Skin.hpp  Cmd_SubTitle.hpp  Cmd_Team.hpp  Cmd_Title.hpp  Cmd_Url.hpp  Cmd_Version.hpp  Handler.hpp  Interface.hpp
include/Data/: Assets.hpp  Data.hpp  Player.hpp  Seeding.hpp  Winner.hpp
include/Data/Dictionary/: Background.hpp  Character.hpp  Dictionary.hpp
include/Generator/: Generator.hpp  Player.hpp
include/Logic/: Logic.hpp  Render.hpp
include/Render/: Canva.hpp  Image.hpp  Object.hpp  Text.hpp
include/UI/: App.hpp  Qt.hpp
include/UI/Tools/: Browser.hpp  GroupBox.hpp  Randomizer.hpp  Window.hpp
include/UI/Windows/: Notification.hpp  PlayerSettings.hpp  Primary.hpp  Shared.hpp
include/UI/Windows/Common/: Notification.hpp  Shared.hpp
include/UI/Windows/Secondary/: PlayerBracket.hpp  PlayerSettings.hpp
include/Update/: Update.hpp
resources/: CanvaSolo_Deer.json  app_assets.qrc  resourceMaker.sh  upd_icon.rc
resources/data/: CanvaSolo.json
resources/data/Winner/MK8/: CanvaSolo.json
resources/data/Winner/MKWorld/: CanvaSolo.json
resources/icons/: wip.psd
resources/template/: grand_8_bracket_48.xlsx  rififi_bracket_solo_16.xlsx  rififi_bracket_solo_24.xlsx  rififi_bracket_solo_32.xlsx  rififi_bracket_solo_48.xlsx
src/: Main.cpp  Utils.cpp
src/Commands/: Background.cpp  Count.cpp  Create.cpp  Date.cpp  Dir.cpp  Help.cpp  List.cpp  Load.cpp  Player.cpp  Print.cpp  Quit.cpp  Random.cpp  Skin.cpp  SubTitle.cpp  Team.cpp  Title.cpp  Url.cpp  Version.cpp
src/Config/: Init.cpp
src/Data/: Assets.cpp  Data.cpp  Player.cpp  Winner.cpp
src/Data/Dictionary/: Background.cpp  Character.cpp
src/Data/Seeding/: Player.cpp  Seeding.cpp
src/Data/Winner/: Player.cpp  Winner.cpp
src/Generator/: Duo.cpp  Generator.cpp  Player.cpp  Shared.cpp  Solo.cpp
src/Logic/: Bracket.cpp  ExcelParser.cpp  LineParser.cpp  Render.cpp  Solo.cpp  Terminal.cpp  Winner.cpp
src/Render/: Canva.cpp  Image.cpp  Object.cpp  Text.cpp
src/UI/App/: Themes.cpp
src/UI/Tools/: Browser.cpp  GroupBox.cpp  Randomizer.cpp  Window.cpp
src/UI/Windows/: Notification.cpp  Shared.cpp
src/UI/Windows/Common/: Notification.cpp  Shared.cpp
src/UI/Windows/PlayerSettings/: Duo.cpp  Info.cpp  Solo.cpp
src/UI/Windows/Primary/: Core.cpp  PageWinner.cpp
src/UI/Windows/Primary/Bracket/: Page.cpp
src/UI/Windows/Primary/Menu/: Bar.cpp
src/UI/Windows/Primary/Tabs/Bracket/: Callback.cpp  Page.cpp
src/UI/Windows/Primary/Tabs/Winner/: BoxAutoLoad.cpp  BoxRank.cpp  Page.cpp
src/UI/Windows/Primary/Winner/: BoxAutoLoad.cpp  BoxInfo.cpp  BoxRank.cpp  Page.cpp
src/UI/Windows/Secondary/: PlayerBracket.cpp
src/UI/Windows/Secondary/PlayerSettings/: Duo.cpp  Info.cpp  Solo.cpp
src/Update/: Main.cpp  Manager.cpp  Request.cpp  Updater.cpp
src/Utils/: Process.cpp  Request.cpp  String.cpp  Temp.cpp
template/: grand_8_bracket_48.xlsx  rififi_bracket_duo.json  rififi_bracket_solo_16.xlsx  rififi_bracket_solo_24.xlsx  rififi_bracket_solo_32.xlsx  rififi_bracket_solo_48.xlsx
